모니터링을 위한 spring actuator 설정

--- a/payment/src/main/resources/application-dev.yml
+++ b/payment/src/main/resources/application-dev.yml
@@ -19,3 +19,8 @@ spring:
         format_sql: true
     generate-ddl: true
     defer-datasource-initialization: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
