--- a/user/build.gradle
+++ b/user/build.gradle
@@ -6,6 +6,9 @@ dependencies {
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+    
     implementation project(':common:response')
     implementation project(':common:utils')
     implementation project(':common:secret-config')
