--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -52,5 +52,9 @@ spring:
       bootstrap-servers: localhost:9092
       value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
 
