--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -11,3 +11,9 @@ keycloak:
     password: ${KEYCLOAK_ADMIN_PASSWORD}
 
 jwt-secret-key: ${JWT_SECRET_KEY}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
