--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "nuxt-app",
-  "private": true,
+  "name": "my-app",
   "scripts": {
+    "dev": "nuxt",
     "build": "nuxt build",
-    "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.0"
+    "start": "nuxt start"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "lodash": "^4.17.21"
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
+    "lodash": "^4.17.21",
+    "nuxt": "^2.17.1",
+    "vue": "^2.6.14",
+    "vue-lodash": "^2.1.2",
+    "vuex-persistedstate": "^3.2.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
