refact: 도메인 제거, 고정 IP 주소 사용

--- a/keycloak/dev.conf
+++ b/keycloak/dev.conf
@@ -1,3 +1,6 @@
 # 프록시 서버와 http 통신을 하게 해준다. (프록시서버(nginx)에 https 적용할 것)
 proxy=edge
-hostname=keycloak.atticket.o-r.kr
+# hostname=keycloak.atticket.o-r.kr
+hostname=101.101.209.105/keycloak
+hostname-admin=101.101.209.105/keycloak
+hostname-strict-https=false
