--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,15 +5,15 @@ services:
     container_name: at_ticket-reverse-proxy
     ports:
       - "80:80"
-      - "443:443"
+    #      - "443:443"
     restart: always
     # SSL 적용
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl/api/fullchain.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem
-      - ./ssl/api/privkey.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem
-      - ./ssl/keycloak/fullchain.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem
-      - ./ssl/keycloak/privkey.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem
+  #      - ./ssl/api/fullchain.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem
+  #      - ./ssl/api/privkey.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem
+  #      - ./ssl/keycloak/fullchain.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem
+  #      - ./ssl/keycloak/privkey.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem
 
   database:
     image: mysql:8.0.21
@@ -143,7 +143,8 @@ services:
     container_name: at_ticket-keycloak
     expose:
       - 8080
-    command: start --features=preview
+    #    command: start --features=preview
+    command: start-dev --features=preview
     environment:
       - KC_DB=mysql
       - KC_DB_USERNAME=${DB_USERNAME}
