--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,110 @@
 events {}
 
+# http {
+#   upstream product {
+#     server product:8000;
+#   }
+#
+#   upstream reservation {
+#     server reservation:8100;
+#   }
+#
+#   upstream payment {
+#     server payment:8200;
+#   }
+#
+#   upstream user {
+#     server user:9000;
+#   }
+#
+#   upstream keycloak {
+#     server keycloak:8080;
+#   }
+#
+#   upstream kafka-app {
+#     server kafka-app:9200;
+#   }
+#
+#   # Redirect all traffic to HTTPS
+#   server {
+#     listen 80;
+#     return 301 https://$host$request_uri;
+#   }
+#
+#   # api
+#   server {
+#     listen 443 ssl;
+#     ssl_certificate /etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem;
+#
+#     # Disable SSL
+#     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+#
+#     # 통신과정에서 사용할 암호화 알고리즘
+#     ssl_prefer_server_ciphers on;
+#     ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+#
+#     # Enable HSTS
+#     # client의 browser에게 http로 어떠한 것도 load 하지 말라고 규제합니다.
+#     # 이를 통해 http에서 https로 redirect 되는 request를 minimize 할 수 있습니다.
+#     add_header Strict-Transport-Security "max-age=31536000" always;
+#
+#     # SSL sessions
+#     ssl_session_cache shared:SSL:10m;
+#     ssl_session_timeout 10m;
+#
+#     server_name api.atticket.o-r.kr;
+#
+#     location /products {
+#       proxy_pass http://product;
+#     }
+#     location /shows {
+#       proxy_pass http://product;
+#     }
+#     location /reservations {
+#       proxy_pass http://reservation;
+#     }
+#     location /users {
+#       proxy_pass http://user;
+#     }
+#   }
+#
+#   # keycloak
+#   server {
+#     listen 443 ssl;
+#     ssl_certificate /etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem;
+#
+#     # Disable SSL
+#     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+#
+#     # 통신과정에서 사용할 암호화 알고리즘
+#     ssl_prefer_server_ciphers on;
+#     ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+#
+#     # Enable HSTS
+#     # client의 browser에게 http로 어떠한 것도 load 하지 말라고 규제합니다.
+#     # 이를 통해 http에서 https로 redirect 되는 request를 minimize 할 수 있습니다.
+#     add_header Strict-Transport-Security "max-age=31536000" always;
+#
+#     # SSL sessions
+#     ssl_session_cache shared:SSL:10m;
+#     ssl_session_timeout 10m;
+#
+#     proxy_set_header Host                  $host;
+#     proxy_set_header X-Forwarded-For       $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Host      $host;
+#     proxy_set_header X-Forwarded-Server    $host;
+#     proxy_set_header X-Forwarded-Proto     https;
+#
+#     server_name keycloak.atticket.o-r.kr;
+#
+#     location / {
+#       proxy_pass http://keycloak;
+#     }
+#   }
+# }
+
 http {
   upstream product {
     server product:8000;
@@ -25,82 +130,35 @@ http {
     server kafka-app:9200;
   }
 
-  # Redirect all traffic to HTTPS
   server {
     listen 80;
-    return 301 https://$host$request_uri;
-  }
 
-  # api
-  server {
-    listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem;
-
-    # Disable SSL
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
-    # 통신과정에서 사용할 암호화 알고리즘
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
-
-    # Enable HSTS
-    # client의 browser에게 http로 어떠한 것도 load 하지 말라고 규제합니다.
-    # 이를 통해 http에서 https로 redirect 되는 request를 minimize 할 수 있습니다.
-    add_header Strict-Transport-Security "max-age=31536000" always;
-
-    # SSL sessions
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
-    server_name api.atticket.o-r.kr;
-
-    location /products {
+    location /api/products {
+      rewrite ^/api(.*)$ $1?$args break;
       proxy_pass http://product;
     }
-    location /shows {
+
+    location /api/shows {
+      rewrite ^/api(.*)$ $1?$args break;
       proxy_pass http://product;
     }
-    location /reservations {
+
+    location /api/reservations {
+      rewrite ^/api(.*)$ $1?$args break;
       proxy_pass http://reservation;
     }
-    location /users {
+
+    location /api/users {
+      rewrite ^/api(.*)$ $1?$args break;
       proxy_pass http://user;
     }
-  }
 
-  # keycloak
-  server {
-    listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem;
+    location /prometheus/products/ {
+      proxy_pass http://product/actuator/prometheus/;
+    }
 
-    # Disable SSL
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
-    # 통신과정에서 사용할 암호화 알고리즘
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
-
-    # Enable HSTS
-    # client의 browser에게 http로 어떠한 것도 load 하지 말라고 규제합니다.
-    # 이를 통해 http에서 https로 redirect 되는 request를 minimize 할 수 있습니다.
-    add_header Strict-Transport-Security "max-age=31536000" always;
-
-    # SSL sessions
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
-    proxy_set_header Host                  $host;
-    proxy_set_header X-Forwarded-For       $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Host      $host;
-    proxy_set_header X-Forwarded-Server    $host;
-    proxy_set_header X-Forwarded-Proto     https;
-
-    server_name keycloak.atticket.o-r.kr;
-
-    location / {
-      proxy_pass http://keycloak;
+    location /keycloak/ {
+      proxy_pass http://keycloak/;
     }
   }
 }
