--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/proxy": "^2.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nuxt": "^2.17.1",
     "vue": "^2.6.14",
     "vue-lodash": "^2.1.2",
+    "vue2-datepicker": "^3.11.1",
     "vuex-persistedstate": "^3.2.1"
   },
   "devDependencies": {
