--- a/product/build.gradle
+++ b/product/build.gradle
@@ -1,9 +1,34 @@
 plugins {
     id 'atticket-spring-boot-app'
+    id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
 
+configurations {
+    asciidoctorExt
+}
+
+
 dependencies {
+
+    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
     implementation project(':common:response')
     implementation project(':common:utils')
     implementation project(':common:secret-config')
+
+    ext {
+        snippetsDir = file('build/generated-snippets')
+    }
+
+    test {
+        outputs.dir snippetsDir
+    }
+
+    asciidoctor {
+        inputs.dir snippetsDir
+        configurations 'asciidoctorExt'
+        dependsOn test
+    }
+
 }
