Restdoc 테스트 코드 작성  * 공연별 남은 좌석 조회

--- a/payment/build.gradle
+++ b/payment/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'atticket-spring-boot-app'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
+configurations {
+    asciidoctorExt
+}
 
 dependencies {
 
