Redis 설정 추가 상품 상세정보 정보 캐시 사용 설정

--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -5,12 +5,10 @@ logging:
   level:
     root: info
 
-
 api:
   reservation:
     url: localhost
     port: 8100
-
 
 spring:
   datasource:
@@ -30,6 +28,9 @@ spring:
         format_sql: true
     generate-ddl: true
     defer-datasource-initialization: true
+  redis:
+    host: localhost
+    port: 6379
 
   kafka:
     producer:
