--- a/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
+++ b/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
@@ -17,6 +17,10 @@ dependencies {
 
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("com.mysql:mysql-connector-j")
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
+
 }
 
 test {
