조회 기능에 캐시 설정

--- a/reservation/src/main/resources/application-dev.yml
+++ b/reservation/src/main/resources/application-dev.yml
@@ -23,6 +23,11 @@ spring:
       hibernate:
         format_sql: true
     generate-ddl: true
+  redis:
+    host: redis
+    port: 6379
+    password: ${REDIS_PASSWORD}
+
 
 jwt-secret-key: ${JWT_SECRET_KEY}
 
