--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -8,7 +8,7 @@ configurations {
 }
 
 dependencies {
-    
+
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
@@ -16,6 +16,7 @@ dependencies {
     implementation project(':common:utils')
     implementation project(':common:jwt-manager')
     implementation project(':common:secret-config')
+    implementation project(':common:redis-config')
 
     ext {
         snippetsDir = file('build/generated-snippets')
