관심 상품 메일 알림 기능 수정 product에 controller 추가

--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -23,7 +23,8 @@ spring:
       mode: always
   jpa:
     hibernate:
-      ddl-auto: update
+      #      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
