[#44] feat : 유저 테스트 코드 작성 및 REST Doc 문서 작성

--- a/user/build.gradle
+++ b/user/build.gradle
@@ -1,18 +1,12 @@
 plugins {
-    id 'atticket-spring-boot'
+    id 'atticket-spring-boot-app'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
-
 configurations {
     asciidoctorExt
 }
 
 dependencies {
-    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
-    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
-
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
@@ -21,18 +15,19 @@ dependencies {
     implementation project(':common:utils')
     implementation project(':common:secret-config')
     implementation project(':common:jwt-manager')
-}
 
-ext {
-    snippetsDir = file('build/generated-snippets')
-}
+    ext {
+        snippetsDir = file('build/generated-snippets')
+    }
 
-test {
-    outputs.dir snippetsDir
-}
+    test {
+        outputs.dir snippetsDir
+    }
 
-asciidoctor {
-    inputs.dir snippetsDir
-    configurations 'asciidoctorExt'
-    dependsOn test
+    asciidoctor {
+        inputs.dir snippetsDir
+        configurations 'asciidoctorExt'
+        dependsOn test
+    }
+
 }
