--- a/payment/src/main/resources/application-dev.yml
+++ b/payment/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://database:3306/payment?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://223.130.147.179:3306/payment?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   sql:
@@ -19,8 +19,8 @@ spring:
         format_sql: true
     generate-ddl: true
     defer-datasource-initialization: true
-management:
-  endpoints:
-    web:
-      exposure:
-        include: prometheus
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: prometheus
