레디스 설정 정보 common으로 합침

--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -11,6 +11,10 @@ api:
     port: 8100
 
 spring:
+  # commons
+  profiles:
+    include:
+      - redis
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/product?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -28,10 +32,7 @@ spring:
         format_sql: true
     generate-ddl: true
     defer-datasource-initialization: true
-  redis:
-    host: localhost
-    port: 6379
-    password: ${REDIS_PASSWORD}
+
 
   kafka:
     producer:
