--- a/product/build.gradle
+++ b/product/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'atticket-spring-boot-app'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
+    id "query-dsl"
 }
 
 configurations {
@@ -12,17 +13,6 @@ dependencies {
 
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-
-    // Querydsl
-    implementation("com.querydsl:querydsl-core")
-    implementation("com.querydsl:querydsl-jpa")
-
-    annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa")
-    // querydsl JPAAnnotationProcessor 사용 지정
-    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
-    // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
-    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
-    // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
 
     implementation project(':common:response')
     implementation project(':common:utils')
