[#40] 상품 조회 테스트 데이터 추가, 성능 테스트 및 코드 리팩토링 (#46)

--- a/product/build.gradle
+++ b/product/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'atticket-spring-boot-app'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
+    id "query-dsl"
 }
 
 configurations {
