--- a/reservation/src/main/resources/application.yml
+++ b/reservation/src/main/resources/application.yml
@@ -10,6 +10,9 @@ api:
     port: 8200
 
 spring:
+  profiles:
+    include:
+      - redis
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/reservation?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -23,6 +26,7 @@ spring:
       hibernate:
         format_sql: true
     generate-ddl: true
+
 
 jwt-secret-key: ${JWT_SECRET_KEY}
 
