--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -25,7 +25,8 @@ spring:
       mode: always
   jpa:
     hibernate:
-      ddl-auto: update
+      #      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
