--- a/common/redis-config/src/main/resources/application-redis.yml
+++ b/common/redis-config/src/main/resources/application-redis.yml
@@ -4,4 +4,11 @@ spring:
     port: 6379
     password: ${REDIS_PASSWORD}
 
+---
 
+spring.profiles: dev
+spring:
+  redis:
+    host: localhost
+    port: 6379
+    password: ${REDIS_PASSWORD}
