--- a/common/redis-config/src/main/resources/application-redis.yml
+++ b/common/redis-config/src/main/resources/application-redis.yml
@@ -9,6 +9,6 @@ spring:
 spring.profiles: dev
 spring:
   redis:
-    host: localhost
+    host: 223.130.147.210
     port: 6379
     password: ${REDIS_PASSWORD}
