--- a/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
+++ b/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.17.6'
 
 }
 
