Test : 카프카를 사용한 동시성 제어 테스트 브런치

--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation project(':common:jwt-manager')
     implementation project(':common:secret-config')
     implementation project(':common:redis-config')
+    implementation project(':kafka')
 
     ext {
         snippetsDir = file('build/generated-snippets')
