--- a/reservation/src/main/resources/application-dev.yml
+++ b/reservation/src/main/resources/application-dev.yml
@@ -10,14 +10,16 @@ api:
     port: 8200
 
 spring:
+  config:
+    import: classpath:application-redis.yml
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://223.130.147.179/:3306/reservation?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://10.0.0.7:3306/reservation?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
@@ -31,3 +33,4 @@ jwt-secret-key: ${JWT_SECRET_KEY}
 #     web:
 #       exposure:
 #         include: prometheus
+
